# discord_gov_bot

./: .gitignore  Cargo.toml  README.md  build.rs  makefile
files/: abst.txt
src/: main.rs  stdfn.rs
src/files/: nays.txt  yeas.txt
src/stdfn/: filefn.rs
