[package]
name = "discord_gov_bot"
version = "0.1.0"
authors = ["botahamec"]
edition = "2018"
publish = false
build = "build.rs"
description = "A bot to simulate and handle the functions of a mock government"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# The development profile, used for `cargo build`
[profile.dev]
opt-level = 0           #optimization level
debug = true            #enables debug symbols
lto = false             #link time optimization
debug-assertions = true #assert!() is allowed

# The release profile, used for `cargo build --release`
[profile.release]
opt-level = 3
debug = false
lto = true
debug-assertions = false

[dependencies]
serenity = "0.6.3"